# torchutils

./: .gitignore  LICENSE  LICENSE.md  pyproject.toml
src/torchutils/: decorators.py
