[project]
name = "torchutils"
version = "0.1.0"
description = ""
authors = [
    {name = "윤병익",email = "yeun0908@gmail.com"}
]
license = {text = "LicenseRef-dbad"}
requires-python = ">=3.12,<3.15"
dependencies = [
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{include = "torchutils", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = [
    {version = "2.10.0+cpu", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cu126' and extra!='cu128' and extra!='cu130'"},
    {version = "2.10.0+cu126", source = "pytorch-cu126", markers = "extra!='cpu' and extra=='cu126' and extra!='cu128' and extra!='cu130'"},
    {version = "2.10.0+cu128", source = "pytorch-cu128", markers = "extra!='cpu' and extra!='cu126' and extra=='cu128' and extra!='cu130'"},
    {version = "2.10.0+cu130", source = "pytorch-cu130", markers = "extra!='cpu' and extra!='cu126' and extra!='cu128' and extra=='cu130'"}
]
numpy = "^2.4.2"

[tool.poetry.extras]
cpu = ["torch"]
cu126 = ["torch"]
cu128 = ["torch"]
cu130 = ["torch"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
